// Original file: src/proto/proto/file.proto


export interface File {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'url'?: (string);
  'key'?: (string);
  'fundingRoundId'?: (number);
  'userExpId'?: (number);
  'educationId'?: (number);
  'albumId'?: (number);
  'serviceId'?: (number);
  'productId'?: (number);
  'acquisitionId'?: (number);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_url'?: "url";
  '_key'?: "key";
  '_fundingRoundId'?: "fundingRoundId";
  '_userExpId'?: "userExpId";
  '_educationId'?: "educationId";
  '_albumId'?: "albumId";
  '_serviceId'?: "serviceId";
  '_productId'?: "productId";
  '_acquisitionId'?: "acquisitionId";
}

export interface File__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'url'?: (string);
  'key'?: (string);
  'fundingRoundId'?: (number);
  'userExpId'?: (number);
  'educationId'?: (number);
  'albumId'?: (number);
  'serviceId'?: (number);
  'productId'?: (number);
  'acquisitionId'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_url': "url";
  '_key': "key";
  '_fundingRoundId': "fundingRoundId";
  '_userExpId': "userExpId";
  '_educationId': "educationId";
  '_albumId': "albumId";
  '_serviceId': "serviceId";
  '_productId': "productId";
  '_acquisitionId': "acquisitionId";
}
