// Original file: src/proto/proto/file.proto


export interface QueryFile {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'url'?: (string);
  'key'?: (string);
  'fundingRoundId'?: (number);
  'userExpId'?: (number);
  'educationId'?: (number);
  'albumId'?: (number);
  'serviceId'?: (number);
  'productId'?: (number);
  'acquisitionId'?: (number);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_url'?: "url";
  '_key'?: "key";
  '_fundingRoundId'?: "fundingRoundId";
  '_userExpId'?: "userExpId";
  '_educationId'?: "educationId";
  '_albumId'?: "albumId";
  '_serviceId'?: "serviceId";
  '_productId'?: "productId";
  '_acquisitionId'?: "acquisitionId";
}

export interface QueryFile__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'url'?: (string);
  'key'?: (string);
  'fundingRoundId'?: (number);
  'userExpId'?: (number);
  'educationId'?: (number);
  'albumId'?: (number);
  'serviceId'?: (number);
  'productId'?: (number);
  'acquisitionId'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_url': "url";
  '_key': "key";
  '_fundingRoundId': "fundingRoundId";
  '_userExpId': "userExpId";
  '_educationId': "educationId";
  '_albumId': "albumId";
  '_serviceId': "serviceId";
  '_productId': "productId";
  '_acquisitionId': "acquisitionId";
}
